StableDiffusion APIをRESTからgRPCで叩くようにに変更

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -17,6 +17,10 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
+stack_name = "dream-cat"
+s3_prefix = "dream-cat"
+region = "ap-northeast-1"
+image_repositories = []
 
 [default.package.parameters]
 resolve_s3 = true
